Add JWT Token Security to REST Resources
Login returns a JWT Token that can be used with Header "Authorization=Bearer {token}" for secured calls

WARN: Public/Private RSA Keys hardcoded in Login.go
NOTE: Goa Client gen does not currently support JWT Signing 100%
Ref: #1
