# app/contexts.go
@@ -17,6 +17,35 @@ import (
 	"golang.org/x/net/context"
 )
 
+// AuthorizeLoginContext provides the login authorize action context.
+type AuthorizeLoginContext struct {
+	context.Context
+	*goa.ResponseData
+	*goa.RequestData
+	Service *goa.Service
+}
+
+// NewAuthorizeLoginContext parses the incoming request URL and body, performs validations and creates the
+// context used by the login controller authorize action.
+func NewAuthorizeLoginContext(ctx context.Context, service *goa.Service) (*AuthorizeLoginContext, error) {
+	var err error
+	req := goa.ContextRequest(ctx)
+	rctx := AuthorizeLoginContext{Context: ctx, ResponseData: goa.ContextResponse(ctx), RequestData: req, Service: service}
+	return &rctx, err
+}
+
+// OK sends a HTTP response with status code 200.
+func (ctx *AuthorizeLoginContext) OK(r *AuthToken) error {
+	ctx.ResponseData.Header().Set("Content-Type", "application/vnd.authtoken+json")
+	return ctx.Service.Send(ctx.Context, 200, r)
+}
+
+// Unauthorized sends a HTTP response with status code 401.
+func (ctx *AuthorizeLoginContext) Unauthorized() error {
+	ctx.ResponseData.WriteHeader(401)
+	return nil
+}
+
 // ShowVersionContext provides the version show action context.
 type ShowVersionContext struct {
 	context.Context
@@ -36,6 +65,6 @@ func NewShowVersionContext(ctx context.Context, service *goa.Service) (*ShowVers
 
 // OK sends a HTTP response with status code 200.
 func (ctx *ShowVersionContext) OK(r *Version) error {
-	ctx.ResponseData.Header().Set("Content-Type", "application/json")
+	ctx.ResponseData.Header().Set("Content-Type", "application/vnd.version")
 	return ctx.Service.Send(ctx.Context, 200, r)
 }
