# app/media_types.go
@@ -14,9 +14,26 @@ package app
 
 import "github.com/goadesign/goa"
 
+// AuthToken media type.
+//
+// Identifier: application/vnd.authtoken+json
+type AuthToken struct {
+	// JWT Token
+	Token string `json:"token" xml:"token"`
+}
+
+// Validate validates the AuthToken media type instance.
+func (mt *AuthToken) Validate() (err error) {
+	if mt.Token == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "token"))
+	}
+
+	return err
+}
+
 // Version media type.
 //
-// Identifier: application/json
+// Identifier: application/vnd.version+json
 type Version struct {
 	// The date when build
 	BuildTime string `json:"build_time" xml:"build_time"`
