# design/media_types.go
@@ -5,9 +5,8 @@ import (
 	. "github.com/goadesign/goa/design/apidsl"
 )
 
-// ALMVersion defines therunning ALM Version MediaType application/vnd.version+json
-var ALMVersion = MediaType("application/json", func() {
-	TypeName("Version")
+// ALMVersion defines therunning ALM Version MediaType
+var ALMVersion = MediaType("application/vnd.version+json", func() {
 	Description("The current running version")
 	Attributes(func() {
 		Attribute("commit", String, "Commit SHA this build is based on")
@@ -17,5 +16,18 @@ var ALMVersion = MediaType("application/json", func() {
 	View("default", func() {
 		Attribute("commit")
 		Attribute("build_time")
+	})
+})
+
+// AuthToken represents an authentication JWT Token
+var AuthToken = MediaType("application/vnd.authtoken+json", func() {
+	TypeName("AuthToken")
+	Description("JWT Token")
+	Attributes(func() {
+		Attribute("token", String, "JWT Token")
+		Required("token")
+	})
+	View("default", func() {
+		Attribute("token")
 	})
 })
