# design/resources.go
@@ -11,10 +11,29 @@ var _ = Resource("version", func() {
 	BasePath("/version")
 
 	Action("show", func() {
+		Security("jwt", func() {
+			Scope("system")
+		})
 		Routing(
 			GET(""),
 		)
 		Description("Show current running version")
 		Response(OK)
+	})
+})
+
+var _ = Resource("login", func() {
+
+	BasePath("/login")
+
+	Action("authorize", func() {
+		Routing(
+			GET("authorize"),
+		)
+		Description("Authorize with the ALM")
+		Response(OK, func() {
+			Media(AuthToken)
+		})
+		Response(Unauthorized)
 	})
 })
